--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,5 +1,17 @@
 {
   "pt": "Português",
   "en": "Inglês",
-  "es": "Espanhol"
+  "es": "Espanhol",
+
+  "ola": "Olá, eu sou",
+  "dev": "Desenvolvedor front-end",
+
+  "experience": "Experiência",
+  "junior": "Júnior",
+  "project": "Projetos",
+  "aboutText": "Bem-vindo ao meu portfólio pessoal! Eu sou um desenvolvedor front-end apaixonado por HTML, CSS, JavaScript e React, e tenho 2 anos de experiência profissional atuando como Desenvolvedor Front-end. No meu portfólio, você encontrará alguns dos projetos mais interessantes em que trabalhei, incluindo sites, aplicações web e experiências interativas. Eu trabalho com HTML e CSS para criar layouts elegantes e acessíveis, e utilizo JavaScript para dar vida às minhas páginas web com interações dinâmicas e funcionalidades avançadas. Um dos meus pontos fortes é a minha habilidade em React. Eu tenho experiência na criação de componentes reutilizáveis, utilização de bibliotecas populares como Redux e Material UI, e construção de aplicações complexas de uma página. Em resumo, meu portfólio pessoal demonstra minha capacidade de desenvolver sites modernos e funcionais utilizando as tecnologias mais recentes. Se você está procurando um desenvolvedor front-end que possa entregar resultados excepcionais, eu estou aqui para ajudar. Obrigado pela visita!",
+  "cv": "Currículo",
+  "contact": "Entre em contato"
+
+  
 }
